--- a/res/values/player_hater_flags.xml
+++ b/res/values/player_hater_flags.xml
@@ -2,4 +2,5 @@
 <resources>
     <bool name="__playerhater_lockscreen">false</bool>
     <bool name="__playerhater_audiofocus">false</bool>
+    <bool name="__playerhater_active_notification">false</bool>
 </resources>
