--- a/res/values/player_hater_flags.xml
+++ b/res/values/player_hater_flags.xml
@@ -3,4 +3,7 @@
     <bool name="__playerhater_lockscreen">false</bool>
     <bool name="__playerhater_audiofocus">false</bool>
     <bool name="__playerhater_active_notification">false</bool>
+    <string name="stop">Stop</string>
+    <string name="skip">Skip</string>
+    <string name="play_pause">Toggle Playback</string>
 </resources>
