--- a/res/layout-v11/__player_hater_notification.xml
+++ b/res/layout-v11/__player_hater_notification.xml
@@ -1,16 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="?android:style/TextAppearance.StatusBar.EventContent"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    style="?android:style/TextAppearance.StatusBar.EventContent">
+    android:layout_height="fill_parent" >
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="64dp"
         android:layout_height="match_parent"
-        android:scaleType="center"
         android:layout_alignParentTop="true"
+        android:layout_marginRight="10dp"
         android:background="#3333B5E5"
-        android:layout_marginRight="10dp" />
+        android:scaleType="center" />
 
     <ImageView
         android:id="@+id/stop"
@@ -18,17 +18,34 @@
         android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
-        android:scaleType="center"
-        android:paddingRight="5dp"
         android:alpha="0.4"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/stop"
+        android:paddingRight="5dp"
+        android:scaleType="center"
         android:src="@drawable/__player_hater_stop" />
+
+    <ImageView
+        android:id="@+id/skip"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_toLeftOf="@id/stop"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/skip"
+        android:padding="5dp"
+        android:paddingRight="10dp"
+        android:scaleType="center"
+        android:src="@drawable/__player_hater_skip" />
 
     <ImageView
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
-        android:layout_toLeftOf="@id/stop"
+        android:layout_toLeftOf="@id/skip"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/play_pause"
         android:padding="5dp"
         android:paddingRight="10dp"
         android:scaleType="center"
@@ -41,19 +58,25 @@
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/button"
         android:layout_toRightOf="@id/image"
-        android:paddingBottom="2dp"
-        android:singleLine="true"
         android:ellipsize="marquee"
-        android:paddingTop="5dp" />
+        android:marqueeRepeatLimit="marquee_forever"
+    	android:scrollHorizontally="false"                                     
+    	android:focusable="true"
+    	android:focusableInTouchMode="true" 
+        android:paddingBottom="2dp"
+        android:paddingTop="5dp"
+        android:singleLine="true" >
+        <requestFocus/>
+    </TextView>
 
     <TextView
         android:id="@+id/text"
         style="@android:style/TextAppearance.StatusBar.EventContent"
-        android:alpha="0.7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:layout_toLeftOf="@id/button"
-        android:layout_toRightOf="@id/image" />
+        android:layout_toRightOf="@id/image"
+        android:alpha="0.7" />
 
 </RelativeLayout>
