--- a/res/layout-v14/__player_hater_notification_expanded.xml
+++ b/res/layout-v14/__player_hater_notification_expanded.xml
@@ -44,7 +44,7 @@
             android:layout_weight="0"
             android:gravity="top" />
 
-        <View
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?android:attr/dividerHorizontal" />
