--- a/res/layout-v16/zzz_ph_exp_notification.xml
+++ b/res/layout-v16/zzz_ph_exp_notification.xml
@@ -47,8 +47,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:contentDescription="@android:string/cancel"
-            android:background="?android:attr/dividerHorizontal" />
+            android:background="?android:attr/dividerHorizontal"
+            android:contentDescription="@android:string/cancel" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -64,9 +64,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/back"
                 android:gravity="center"
                 android:padding="6dp"
-                android:contentDescription="@string/back"
                 android:scaleType="center"
                 android:src="@drawable/zzz_ph_bt_back" />
 
