--- a/res/values-v11/player_hater_flags.xml
+++ b/res/values-v11/player_hater_flags.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <bool name="__playerhater_notification">false</bool>
     <bool name="__playerhater_touchable_notification">true</bool>
 </resources>
