--- a/res/values/player_hater_flags.xml
+++ b/res/values/player_hater_flags.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <bool name="__playerhater_notification">false</bool>
     <bool name="__playerhater_lockscreen">false</bool>
     <bool name="__playerhater_audiofocus">false</bool>
     <bool name="__playerhater_touchable_notification">false</bool>
@@ -8,7 +9,7 @@
 
     <string name="stop">Stop</string>
     <string name="back">Previous</string>
-    <string name="album_art">ALbum Art</string>
+    <string name="album_art">Album Art</string>
     <string name="skip">Skip</string>
     <string name="play_pause">Toggle Playback</string>
 
