--- a/res/xml/zzz_ph_config_defaults.xml
+++ b/res/xml/zzz_ph_config_defaults.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <config>
+
     <plugin
         name="org.prx.android.playerhater.plugins.AudioFocusPlugin"
         enabled="@bool/__playerhater_audiofocus" />
+    <plugin
+        name="org.prx.android.playerhater.plugins.NotificationPlugin"
+        enabled="@bool/__playerhater_notification" />
     <plugin
         name="org.prx.android.playerhater.plugins.TouchableNotificationPlugin"
         enabled="@bool/__playerhater_touchable_notification" />
@@ -12,4 +16,5 @@
     <plugin
         name="org.prx.android.playerhater.plugins.LockScreenControlsPlugin"
         enabled="@bool/__playerhater_lockscreen" />
+
 </config>
