--- a/res/xml/zzz_ph_config_defaults.xml
+++ b/res/xml/zzz_ph_config_defaults.xml
@@ -2,6 +2,9 @@
 <config>
 
     <plugin
+        name="org.prx.android.playerhater.plugins.PebblePlugin"
+        enabled="true" />
+    <plugin
         name="org.prx.android.playerhater.plugins.NotificationPlugin"
         enabled="@bool/__playerhater_notification" />
     <plugin
