--- a/res/layout-v11/zzz_ph_hc_notification.xml
+++ b/res/layout-v11/zzz_ph_hc_notification.xml
@@ -79,7 +79,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:layout_weight="1"
-            android:maxLines="2"
+            android:singleLine="true"
+            android:lines="1"
             android:paddingLeft="8dp" />
     </LinearLayout>
 
