--- a/res/values-v14/player_hater_flags.xml
+++ b/res/values-v14/player_hater_flags.xml
@@ -16,5 +16,5 @@
 -->
 <resources>
     <bool name="zzz_ph_audiofocus">false</bool>    
-	<bool name="zzz_ph_touchscreen">true</bool>    
+	<bool name="zzz_ph_lockscreen">true</bool>    
 </resources>
