--- a/src/main/res/layout-v11/zzz_ph_hc_notification.xml
+++ b/src/main/res/layout-v11/zzz_ph_hc_notification.xml
@@ -19,7 +19,7 @@
     android:layout_height="match_parent" >
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/zzz_ph_notification_image"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_alignParentLeft="true"
@@ -28,7 +28,7 @@
         android:scaleType="fitCenter" />
 
     <ImageView
-        android:id="@+id/stop"
+        android:id="@+id/zzz_ph_stop_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -41,11 +41,11 @@
         android:src="@drawable/zzz_ph_bt_stop" />
 
     <ImageView
-        android:id="@+id/skip"
+        android:id="@+id/zzz_ph_skip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/stop"
+        android:layout_toLeftOf="@id/zzz_ph_stop_button"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/skip"
         android:padding="8dp"
@@ -53,11 +53,11 @@
         android:src="@drawable/zzz_ph_bt_skip" />
 
     <ImageView
-        android:id="@+id/button"
+        android:id="@+id/zzz_ph_play_pause_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/skip"
+        android:layout_toLeftOf="@id/zzz_ph_skip_button"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/play_pause"
         android:padding="8dp"
@@ -66,12 +66,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toLeftOf="@id/button"
-        android:layout_toRightOf="@id/image"
+        android:layout_toLeftOf="@id/zzz_ph_play_pause_button"
+        android:layout_toRightOf="@id/zzz_ph_notification_image"
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/zzz_ph_notification_title"
             style="@android:style/TextAppearance.StatusBar.EventContent.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/zzz_ph_notification_text"
             style="@android:style/TextAppearance.StatusBar.EventContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
